# smartmetertx

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker.yml
doc/: config.yml.md  fetchMeterReads.cron.py.md  smtx-fetch.md  smtx-power2choose.md  smtx-reconcile.md  smtx-report.md  smtx-server.md
lib/smartmetertx/: __init__.py  api.py  meterReport.py  power2choose.py  reconcile.py  schema.py  server.py  smtx2mongo.py  utils.py  www-smartmetertexas-com-chain.pem
ui/: index.html  index.js
ui/assets/js/: main.js
