[options]
include_package_data = True
setup_requires = ["PyYAML"]

[tool:pytest]
testpaths = tests
python_files = tests/runtests.py

[nosetests]
detailed-errors=1
with-coverage=1
cover-package=smartmetertx
cover-inclusive=1
cover-html=1
cover-html-dir=tests/coverage/
debug=nose.loader
pdb=0
pdb-failures=0
nocapture=1
tests=tests/runtests.py

[metadata]
name = "smartmetertx2mongo"
version = "1.2.1"
requires_python = ">=3.6"
dependencies = [ "PyYAML>=6.0.1",
    'kizano',
    'pymongo',
    'requests',
    'cherrypy',
    'PyYAML',
    'python-gnupg',
    'jinja2' ]
authors = [ {name = "Markizano Draconus", email = "markizano@markizano.net"} ]
maintainers = [ {name = "Markizano Draconus", email = "markizano@markizano.net"} ]
description = "SmartMeterTexas App I put together to visualize collected metric data."
readme = "README.md"

classifiers = [
  "Development Status :: 3 - Stable",
  "Programming Language :: Python" ]

project_urls =
    Homepage = "https://markizano.net"
    Documentation = "https://docs.markizano.net"
    Repository = "https://github.com/markizano/smartmetertx"
    BugTracker = "https://github.com/markizano/smartmetertx/issues"
    Changelog = "https://github.com/markizano/smartmetertx/blob/master/CHANGELOG.md"

